--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -348,7 +348,7 @@
 				      <span ui-sref="{{bc.state}}"> / {{bc.title}}</span>
 				  	</a>
 				</div>
-				<div ng-show="rmodel.message.show" class="alert alert-{{rmodel.message.type}} success-msg">
+				<div ng-show="rmodel.message.show" class="alert alert-{{rmodel.message.type}} success-msg col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					{{rmodel.message.text}}
 					<span class="close" ng-click="rmodel.message.show=false"></span>
 				</div>
