--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -342,7 +342,7 @@
 
 		<section id="content" class="gray-area">
 			<div class="container">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 breadcrumb-col">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 breadcrumb-col" ng-hide="mainMdl.disableBreadcrumb">
 				    <a ui-sref="home">Home </a>
 				    <a  ng-repeat="bc in mainMdl.breadcrumbs">
 				      <span ui-sref="{{bc.state}}"> / {{bc.title}}</span>
