--- a/src/app/views/seller-account/equipments/add/add.html
+++ b/src/app/views/seller-account/equipments/add/add.html
@@ -4,7 +4,9 @@
 </div>
 <div class="add-equipment col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding add-equip-col">
 	<form validate-form name="addEquiMdl.form" novalidate ng-submit="updateProfile()" class="edit-profile-form buyer-add-jobsite">
-		<h1 class="no-margin black-color seller-heading-font">{{editMode ? 'Edit Equipment' :'Add New Equipment'}}</h1>
+		<h1 class="no-margin black-color seller-heading-font">{{editMode ? 'Edit Equipment' :'Add New Equipment'}}
+			<i class="fa fa-times-circle-o close-icon" ui-sref="main.sellerAccount.equipments.list"></i>
+		</h1>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 			<hr>
 		</div>
