--- a/src/app/views/seller-account/inventory/add/add.html
+++ b/src/app/views/seller-account/inventory/add/add.html
@@ -1,6 +1,8 @@
 <div class="add-equipment col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding add-equip-col">
 	<form validate-form name="mdl.form" novalidate ng-submit="add()" class="edit-profile-form buyer-add-jobsite">
-		<h1 class="no-margin black-color seller-heading-font">Add Inventory</h1>
+		<h1 class="no-margin black-color seller-heading-font">Add Inventory
+			<i class="fa fa-times-circle-o close-icon" ui-sref="main.sellerAccount.inventory.list"></i>
+		</h1>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 			<hr>
 		</div>
