--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -415,7 +415,7 @@
 						</div>
 		    	</div>
 		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pull-center cont-btn-col">
-		    		<button class="btn all-btn primary-btn pull-right" ui-sref="main.payment" ng-disabled="!mdl.termsAccepted">Continue with Payment</button>
+		    		<button class="btn all-btn primary-btn pull-right" ng-click="continueWithPayment()" ng-disabled="!mdl.termsAccepted">Continue with Payment</button>
 		    	</div>
 		    </div>
 		    <div role="tabpanel" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane jobsite-tab col-padding-small" id="home">
