--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -80,7 +80,7 @@
 								<ul class="menu mini dropdown-menu">
 									<li><a ui-sref="main.account.dashboard">My Buyer Dashboard</a></li>
 									<li><a ui-sref="main.sellerAccount.dashboard">My Seller Dashboard</a></li>
-									<li><a ui-sref="main.account.profile.view" title="profile-settings">Account & Setting</a></li>
+									<li><a ui-sref="main.profile.view" title="profile-settings">Account & Setting</a></li>
 									<li><a href="" ng-click="logout()" title="signout">Signout</a></li>
 								</ul>
 							</li>
