--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -293,8 +293,8 @@
         </ul>
 
     </div>
-    <div ng-show="mdl.tab2=='reviews'" ng-class="{'fade in active':mdl.tab2=='reviews'}" class="tab-pane" >
-        <div class="intro table-wrapper full-width hidden-table-sms no-border">
+    <div ng-show="mdl.tab2=='reviews'" ng-class="{'fade in active':mdl.tab2=='reviews'}" class="tab-pane" style="padding-left: 15px; padding-right: 15px; padding-bottom: 0;" >
+        <div class="intro table-wrapper full-width hidden-table-sms no-border" style="padding-bottom: 15px;">
             <div class="rating table-cell col-sm-4">
                 <span class="score">3.9/5.0</span>
 
@@ -304,7 +304,7 @@
                 <a class="goto-writereview-pane btn small-btn primary-btn full-width" ng-click="mdl.tab2='write-review'">WRITE A REVIEW</a>
             </div>
             <div class="table-cell col-sm-8">
-                <div class="detailed-rating">
+                <!-- <div class="detailed-rating">
                     <ul class="clearfix">
                         <li class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                             <div class="each-rating"><label>service</label>
@@ -371,39 +371,71 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="guest-reviews">
-        <div class="guest-review table-wrapper" ng-repeat="review in mdl.reviewList">
-            <h2>Recent User Reviews</h2>
-            <div class="col-xs-3 col-md-2 author table-cell">
-                <a  ><img ng-src="{{ review.userImage||'http://placehold.it/270x263'}}" alt="" width="270" height="263"/></a>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+            <hr>
+        </div>
+        <!-- <div class="guest-reviews">
+            <div class="guest-review table-wrapper" ng-repeat="review in mdl.reviewList">
+                <h2>Recent User Reviews</h2>
+                <div class="col-xs-3 col-md-2 author table-cell">
+                    <a  ><img ng-src="{{ review.userImage||'http://placehold.it/270x263'}}" alt="" width="270" height="263"/></a>
 
-                <p class="name">{{review.userName}}</p>
+                    <p class="name">{{review.userName}}</p>
 
-                <p class="date">{{review.date}}</p>
-            </div>
-            <div class="col-xs-9 col-md-10 table-cell comment-container">
-                <div class="comment-header clearfix">
-                    <h4 class="comment-title">{{review.comment}}</h4>
+                    <p class="date">{{review.date}}</p>
+                </div>
+                <div class="col-xs-9 col-md-10 table-cell comment-container">
+                    <div class="comment-header clearfix">
+                        <h4 class="comment-title">{{review.comment}}</h4>
 
-                    <div class="review-score">
-                        <div class="five-stars-container">
-                            <div class="five-stars" style="width: 80%;"></div>
+                        <div class="review-score">
+                            <div class="five-stars-container">
+                                <div class="five-stars" style="width: 80%;"></div>
+                            </div>
+                            <span class="score">{{review.rating}}</span>
                         </div>
-                        <span class="score">{{review.rating}}</span>
+                    </div>
+                    <div class="comment-content">
+                        <p>{{review.comment}}</p>
                     </div>
                 </div>
-                <div class="comment-content">
-                    <p>{{review.comment}}</p>
+            </div>
+        </div> -->
+        <!-- <div class="guest-reviews"> -->
+            <div class="guest-review col-lg-12 col-md-12 col-sm-12 col-xs-12 recent-review-col no-lpadding no-rpadding" ng-repeat="review in mdl.reviewList">
+                <h4>Recent User Reviews</h4>
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12 author">
+                    <a><img ng-src="{{ review.userImage||'http://placehold.it/270x263'}}" alt="" width="270" height="263"/></a>
+                    <p class="name">{{review.userName}}</p>
+                    <p class="date">{{review.date}}</p>
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-9 col-xs-12 comment-container review-comment-col">
+                    <div class="comment-header clearfix">
+                        <div class="review-score visible-xs no-float pull-center">
+                            <div class="five-stars-container">
+                                <div class="five-stars" style="width: 80%;"></div>
+                            </div>
+                            <span class="score">{{review.rating}}</span>
+                        </div>
+                        <h4 class="pull-left">{{review.comment}}</h4>
+                        <div class="review-score hidden-xs">
+                            <div class="five-stars-container">
+                                <div class="five-stars" style="width: 80%;"></div>
+                            </div>
+                            <span class="score">{{review.rating}}</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+                    <hr>
                 </div>
             </div>
-        </div>
-
-    </div>
-    <a   class="button full-width btn-large" ng-show="mdl.equi.reviewList.length>3">LOAD MORE REVIEWS</a>
-     <a   class="button full-width btn-large" ng-show="mdl.equi.reviewList.length==0">NO REVIEWS AVAILABLE</a>
+        <!-- </div> -->
+        <a class="button full-width btn-large" ng-show="mdl.equi.reviewList.length>3">LOAD MORE REVIEWS</a>
+        <a class="button full-width btn-large" ng-show="mdl.equi.reviewList.length==0">NO REVIEWS AVAILABLE</a>
 </div>
 <div ng-show="mdl.tab2=='faqs'" ng-class="{'fade in active':mdl.tab2=='faqs'}" class="tab-pane" >
     <h2>Frquently Asked Questions</h2>
@@ -509,7 +541,7 @@
             </div>
 
         </div>
-    </div>
+</div>
     <div ng-show="mdl.tab2=='write-review'" ng-class="{'fade in active':mdl.tab2=='write-review'}" class="tab-pane" >
         <div class="main-rating full-width intro col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
             <article class="image-box box hotel listing-style1 photo col-lg-4 col-md-12 col-sm-12 col-xs-12 no-mdpadding">
@@ -610,11 +642,11 @@
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
             <form class="review-form">
-            <div class="form-group col-md-12 no-float no-padding write-review-div">
+            <!-- <div class="form-group col-md-12 no-float no-padding write-review-div">
                 <h4 class="title">Title of your review</h4>
                 <input type="text" name="review-title" class="form-control" value=""
                        placeholder="Enter a review title" ng-model="mdl.equi.reviewTitle"/>
-            </div>
+            </div> -->
             <div class="form-group write-review-div">
                 <h4 class="title">Your review</h4>
                 <textarea class="form-control" placeholder="Enter your review (minimum 200 characters)"
