--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 	<br />
 	<div class="row block">
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-			<a class="pointerhover">
+			<a class="pointerhover" ui-sref="main.account.orders.list">
 				<div class="fact blue dashboard-cards">
 					<div class="numbers counters-box">
 						<dl>
