--- a/src/app/views/seller-account/dashboard/dashboard.html
+++ b/src/app/views/seller-account/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 	<br />
 	<div class="row block">
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-			<a class="pointerhover">
+			<a class="pointerhover" ui-sref="main.sellerAccount.orders.list">
 				<div class="fact blue dashboard-cards">
 					<div class="numbers counters-box">
 						<dl>
@@ -25,7 +25,7 @@
 			</a>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-			<a ui-sref="main.account.jobsites.list" >
+			<a ui-sref="main.sellerAccount.jobsites.list" >
 				<div class="fact yellow dashboard-cards">
 					<div class="numbers counters-box">
 						<dl>
