--- a/src/app/views/seller-account/dashboard/dashboard.html
+++ b/src/app/views/seller-account/dashboard/dashboard.html
@@ -136,7 +136,7 @@
 						</a>
 					</li>
 				</ul>
-				<a class="btn all-btn white-btn full-width">VIEW ALL BOOKINGS</a>
+				<a class="btn all-btn white-btn full-width" ui-sref="main.sellerAccount.orders.list">VIEW ALL BOOKINGS</a>
 			</div>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 seller-dash-noti notifications">
