--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -78,7 +78,7 @@
 					</td>
 					<td class="heading-text">{{order.items.length}} items
 					</td>
-					<td class="heading-text bold-font">${{order.subtotal}}
+					<td class="heading-text bold-font">${{order.total}}
 					</td>
 					<td>
 						<a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right btn all-btn white-btn">
