--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -140,7 +140,7 @@
 		<div class="flexslider">
 			<ul class="slides">
 				<li>
-					<div class="slidebg" style="background-image: url('../assets/images/bg.jpg');"></div>
+					<div class="slidebg" style="background-image: url('../assets/images/oil.jpg');"></div>
 					<div class="overlay"></div>
 				</li>
 			</ul>
